cmake_minimum_required(VERSION 3.13)
project(omakovsk_md5 C)

set(CMAKE_C_STANDARD 11)

include_directories(libft)
include_directories(hash_src)

add_executable(ft_ssl
        libft/check_c_conv.c
        libft/check_char.c
        libft/check_conversion.c
        libft/check_digit_conv.c
        libft/check_flags.c
        libft/check_inv_char.c
        libft/check_min_width.c
        libft/check_octhex_conv.c
        libft/check_precision.c
        libft/check_s_conv.c
        libft/check_size_spec.c
        libft/count_precision.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_get_next_line.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_mycount_words.c
        libft/ft_myfactor.c
        libft/ft_myintiter.c
        libft/ft_mypower.c
        libft/ft_myrev.c
        libft/ft_printf.c
        libft/ft_prnt_add_zero.c
        libft/ft_prnt_addsharp.c
        libft/ft_prnt_bgsharp.c
        libft/ft_prnt_itoa_intmax.c
        libft/ft_prnt_itoa_sizet.c
        libft/ft_prnt_itoa_uintmax.c
        libft/ft_prnt_itoall.c
        libft/ft_prnt_itoas.c
        libft/ft_prnt_itoaui.c
        libft/ft_prnt_itoaui_octhex.c
        libft/ft_prnt_itoauimax_octhex.c
        libft/ft_prnt_itoaull.c
        libft/ft_prnt_itoaull_octhex.c
        libft/ft_prnt_itoaus.c
        libft/ft_prnt_itoaus_octhex.c
        libft/ft_prnt_memmaloc.c
        libft/ft_prnt_prs_str.c
        libft/ft_prnt_replace_spc.c
        libft/ft_prnt_sharp_p.c
        libft/ft_prnt_smsharp.c
        libft/ft_prnt_space_flag.c
        libft/ft_prnt_strjoin_prsn.c
        libft/ft_prnt_strjoin_smb.c
        libft/ft_prnt_strjoin_width.c
        libft/ft_prnt_strstr.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        libft/make_minus_flag.c
        libft/make_plus_flag.c
        libft/make_sharp_flag.c
        libft/make_space_flag.c
        libft/make_zero_flag.c
        libft/print_unicode.c
        libft/read_unicode_string.c
        libft/size_spec_h.c
        libft/size_spec_hh.c
        libft/size_spec_j.c
        libft/size_spec_l.c
        libft/size_spec_ll.c
        libft/size_spec_z.c
        libft/use_ss_long.c
        libft/use_ss_short.c
        global/ft_global.c
        global/ft_global.h
        hash_src/ft_init_structs.c
        hash_src/ft_main_hash_function.c
        hash_src/ft_md5.c
        hash_src/ft_md5.h
        hash_src/ft_md5_instead_def.c
        hash_src/ft_md5_rounds.c
        hash_src/ft_parse_and_read.c
        hash_src/ft_parse_and_read.h
        hash_src/ft_sha.c
        hash_src/ft_sha.h
        hash_src/ft_sha_384_512.c
        hash_src/ft_sha_helpers.c
        hash_src/init_start_words.c
        hash_src/main.c)
